--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="social-icons">
                     <a target="_blank" href="https://www.instagram.com/prajwallpb/"><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-whatsapp"></i></a>
-                    <a href=""><i class="fa-brands fa-git-alt"></i></a>
+                    <a target="_blank"href="https://github.com/csprajwalpb/Portfolio"><i class="fa-brands fa-git-alt"></i></a>
                     <a target="_blank" href="https://www.linkedin.com/in/prajwalpb/"><i class="fa-brands fa-linkedin"></i></a>
 
                     </div>
