--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <a target="_blank" href="https://www.linkedin.com/in/prajwalpb/"><i class="fa-brands fa-linkedin"></i></a>
 
                     </div>
-                    <a href="" download class="btn">Download CV</a>
+                    <a href="Images/CV.pdf" download class="btn">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
